--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: 7vh;
-    margin-bottom: 7vh;
+    margin: 7vh auto;
 }
 
 label {
@@ -40,6 +40,21 @@ button {
 }
 .form-button {
     background-color: rgb(89, 89, 255);
+}
+
+.copy-to-clipboard {
+    display: flex;
+    background-color: darkslategray;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+    margin: 7vh auto;
+    justify-content: center;
+    gap: 2vw;
+}
+.copy-to-clipboard > button {
+    height: fit-content;
+    align-self: center;
 }
 
 .pdf-viewer {
