--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,38 @@
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
-}
-
-.form-test {
     display: flex;
     flex-direction: column;
     gap: 7vh;
-    margin: 7vh auto;
+}
+
+.header {
+    /* border: 2px solid red; */
+    width: 100%;
+    /* background-color: rgb(237, 184, 139); */
+    color: #2f4f4f;
+    border-radius: 10px;
+    /* box-shadow: 5px 5px 0px 0px rgba(237, 184, 139, 0.5); */
+    font-weight: normal;
+}
+.header > * {
+    /* border: 1px solid hotpink; */
+    margin: 0;
+    padding: 3vh;
+}
+.header > hr {
+    padding: 0;
+    width: 100%;
+    background-color: rgba(204, 251, 249);
+}
+
+.form-test {
+    /* border: 2px solid green; */
+    display: flex;
+    flex-direction: column;
+    gap: 7vh;
+    width: 100%;
+    align-content: left;
 }
 
 label {
@@ -18,6 +43,7 @@ label {
 }
 input {
     margin-left: 1vw;
+    box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.5);
 }
 .input-hint {
     color: gray;
@@ -25,39 +51,63 @@ input {
     font-weight: normal;
 }
 
-.toolbar {
+.grid-container {
     display: flex;
-    justify-content: center;
+    justify-items: center;
+}
+
+.color-picker {
+    display: flex;
+    align-self: center;
+    gap: 2vw;
+}
+.color-picker > button {
+    color: black;
+    height: fit-content;
+}
+
+.toolbar {
+    /* border: 2px solid blue; */
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
     gap: 2vw;
 }
 
 .toolbar > a > button,
 button {
     color: white;
+    box-shadow: 5px 5px 0px 0px rgb(89, 89, 255, 0.5);
 }
 .reset-form-button {
     background-color: red;
+    box-shadow: 5px 5px 0px 0px rgb(255, 0, 0, 0.5);
 }
 .form-button {
     background-color: rgb(89, 89, 255);
+    box-shadow: 5px 5px 0px 0px rgb(89, 89, 255, 0.5);
 }
 
 .copy-to-clipboard {
     display: flex;
-    background-color: darkslategray;
+    background-color: #2f4f4f;
     color: white;
-    font-weight: bold;
     border-radius: 10px;
-    margin: 7vh auto;
+    box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.5);
+    font-weight: bold;
     justify-content: center;
     gap: 2vw;
 }
 .copy-to-clipboard > button {
     height: fit-content;
     align-self: center;
+    background-color: rgb(204, 251, 249);
+    color: black;
+    box-shadow: 5px 5px 0px 0px rgba(204, 251, 249, 0.5);
 }
 
 .pdf-viewer {
     width: 100%;
     height: 100vh;
+    box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.5);
 }
