--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,8 @@
 #root {
-    --default-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.5);
     --blue: rgb(89, 89, 255);
     --red: red;
 
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 7vh;
+    background-color: #fcfcfc;
 
     @media (max-width: 600px) {
         .toolbar {
@@ -25,19 +17,63 @@
 }
 
 .header {
-    color: #2f4f4f;
-
     > h1 {
-        font-size: 2em;
+        font-size: 2.5em;
+    }
+    color: darkblue;
+    background-color: white;
+    padding: 5vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    margin: 10vh;
+    padding: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5vh;
+
+    & .form {
+        display: flex;
+        flex-direction: column;
+        gap: 5vh;
+        text-align: center;
+        input {
+            margin-left: 1vw;
+        }
+    }
+    & label {
+        font-weight: bold;
+        font-size: large;
     }
 
-    > h4 {
-        font-size: 1em;
+    & .input-hint {
+        color: gray;
+        font-size: medium;
+        font-weight: normal;
     }
+}
 
-    & {
-        padding: 3vh;
-    }
+.toolbar {
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    margin: 10vh;
+    padding: 5vh;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto; */
+    display: flex;
+    gap: 1vw;
 }
 
 .reset-form-button {
@@ -52,75 +88,30 @@
     box-shadow: 5px 5px 0px 0px color-mix(in srgb, var(--blue) 50%, transparent);
 }
 
-.toolbar {
-    display: flex;
-    gap: 2vw;
-}
-
-.colors-component,
-.form {
-    label {
-        font-weight: bold;
-        font-size: large;
-    }
-}
-
-.form {
-    input {
-        margin-left: 1vw;
-        box-shadow: var(--default-box-shadow);
-    }
-}
-
-.input-hint {
-    color: gray;
-    font-size: medium;
-    font-weight: normal;
-}
-
-.color-picker {
-    display: flex;
-    flex-direction: column;
-    gap: 1vh;
-
-    button {
-        color: black;
-        height: fit-content;
-    }
-}
-
 .colors-component {
     display: flex;
     flex-direction: row;
-    gap: 1vw;
+    justify-content: center;
+    gap: 5vw;
 }
 
 .fonts-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: stretch;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 40%;
+}
+
+.font-component {
+    align-self: center;
 }
 
 .copy-to-clipboard {
-    display: flex;
-    background-color: #2f4f4f;
-    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    box-shadow: var(--default-box-shadow);
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+    background-color: #e5e5e5;
     font-weight: bold;
-    justify-content: center;
-    gap: 2vw;
-
-    > button {
-        height: fit-content;
-        align-self: center;
-        background-color: rgb(204, 251, 249);
-        color: black;
-        box-shadow: 5px 5px 0px 0px rgba(204, 251, 249, 0.5);
-    }
-    & i {
-        font-weight: lighter;
-    }
 }
 
 .reset-modal {
@@ -136,7 +127,9 @@
 }
 
 .pdf-viewer {
-    width: 100%;
     height: 100vh;
-    box-shadow: var(--default-box-shadow);
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
