--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,24 @@
     --red: red;
 
     background-color: #fcfcfc;
+    margin-bottom: 5vh;
 
-    @media (max-width: 600px) {
-        .toolbar {
-            flex-direction: row;
+    /* phones */
+    @media screen and (max-width: 500px) {
+        .header > .toolbar {
+            display: none;
         }
-        .copy-to-clipboard {
-            flex-direction: column;
-            align-items: center;
-            font-size: 0.5rem;
+        .main-card {
+            margin: 0;
+        }
+    }
+
+    /* tablets */
+    @media screen and (min-width: 501px) {
+        .main-card {
+            > .toolbar {
+                display: none;
+            }
         }
     }
 }
@@ -60,20 +69,9 @@
 }
 
 .toolbar {
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    gap: 2vw;
-    justify-content: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 15px;
-    margin: 10vh;
-    padding: 5vh;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto; */
     display: flex;
     gap: 1vw;
+    align-self: center;
 }
 
 .reset-form-button {
@@ -90,7 +88,7 @@
 
 .colors-component {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 5vw;
 }
@@ -116,14 +114,13 @@
 
 .reset-modal {
     position: absolute;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-    bottom: 40px;
+    top: 30%;
+    width: 100%;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
     font-size: x-large;
+    gap: 1vw;
 }
 
 .pdf-viewer {
